Trying to fix white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,92 +1,211 @@
-<<<<<<< HEAD
-/* NAVIGATION START */
 
-.main-nav {
-  color: #000066;
-  display: inline-block;
-  float: left;
-  position: relative;
-  margin: 10px;
-  list-style: none;
+
+
+
+
+body {
+  height: 1000px;
+  margin-top: 4em;
+  display: flex;
+  flex-flow: row wrap;
+  align-content: center;
+}
+
+p {
+    font-family: 'Amiko', sans-serif;
+}
+
+blockquote {
+    font-family: 'Kalam', cursive;
+}
+
+nav {
+  background: transparent;
+  background-image: linear-gradient(to right top, pink, white);
+  border-radius: 6px;
+  height: 100px;
+  width: 100%;
   position: fixed;
   top: 0;
-  left: 0;
-  padding: 1em;
-  margin: 2px;
 }
 
 nav a {
+  display: inline-flex;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  height: 90px;
+  width: 90px;
+  color: black;
   text-decoration: none;
 }
 
-.sub-menu-parent {
-    font-size: 2em;
-    line-height: 70px;
-    list-style: none;
-    position: relative;
-=======
-/* Bio Stylings*/
-
-#bio {
-  
-  background: #A1C0B6;
-  background-image: radial-gradient(#F9EED3, #A1C0B6);
-  color: #081B28;
-  margin: ;
-/*  arbitrary width  */
-  width: 100%;
+nav a:hover {
+  color: white;
+  animation: jello 1s;
 }
 
-#bio header {
+
+.home-intro {
+  padding-left: 10px;
+  margin: 1em;
+  margin-top: 1em;
+}
+
+.home-description {
+  padding-left: 20px;
+  margin: 1em;
+  word-spacing: 2px;
+}
+
+
+h1 {
+    position: relative;
+    float: top;
+    font-family: 'Nova Oval', cursive;
+}
+
+form {
+    display: flex;
+    flex-flow: column wrap;
+    padding-left: .5em;
+}
+
+label {
+    padding: .5em;
+}
+
+input {
+    padding: .2em;
+    margin: .5em;
+}
+
+
+/* Gallery */
+
+article {
   display: flex;
   justify-content: space-between;
->>>>>>> origin/master
+  flex-wrap: wrap;
 }
 
-#bio header section {
-  background: rgba(249, 238, 211, 0.55);
-  border-radius: 45%;
-  transition: border-radius 1s;
+article section {
+  padding: 1em;
+  margin-right: 10px;
+  width: 20%;
 }
 
-#bio article {
+.gallery {
+  display: inline-flex;
+  margin: 0;
+  padding: 1em;
+  width: 12em;
+  justify-content: space-around;
+}
+  
+.overlay {
+  display: none;
+  background: rgba(0,0,0,.25);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top:0;
+  left:0;
+  
+}
+
+.overlay:target {
+  display: block;
   display: flex;
-  flex-flow: wrap row;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;  
+  min-height: 50vh;
+  animation: gallery ease 1s;
 }
 
-<<<<<<< HEAD
-.sub-menu-link {
-  font-size: 60%;
+.overlay img {
+  border: 10px solid #000;
+  border-radius: 10px;
+  box-shadow: 0 0 20px #333;
+
 }
 
-/* NAVIGATION END */
 
-.front-page {
-    background: lightcyan;
-    background-image: radial-gradient(rgb(254,171,230), #fff);
-    width: 500px;
-    margin: 20px;
-    position: relative;
-    left: 8em;
+
+
+
+
+
+/* Animation */
+
+
+
+
+
+
+
+
+
+@keyframes gallery {
+  0% { 
+    opacity: 0;
+    transform: scale(0);
+  }
+  
+  100% { 
+    opacity: 1;
+    transform: scale(1);
+  }
+
+
+
+@keyframes jello {
+  from, 11.1%, to {
+    -webkit-transform: none;
+    transform: none;
+  }
+
+  22.2% {
+    -webkit-transform: skewX(-12.5deg) skewY(-12.5deg);
+    transform: skewX(-12.5deg) skewY(-12.5deg);
+  }
+
+  33.3% {
+    -webkit-transform: skewX(6.25deg) skewY(6.25deg);
+    transform: skewX(6.25deg) skewY(6.25deg);
+  }
+
+  44.4% {
+    -webkit-transform: skewX(-3.125deg) skewY(-3.125deg);
+    transform: skewX(-3.125deg) skewY(-3.125deg);
+  }
+
+  55.5% {
+    -webkit-transform: skewX(1.5625deg) skewY(1.5625deg);
+    transform: skewX(1.5625deg) skewY(1.5625deg);
+  }
+
+  66.6% {
+    -webkit-transform: skewX(-0.78125deg) skewY(-0.78125deg);
+    transform: skewX(-0.78125deg) skewY(-0.78125deg);
+  }
+
+  77.7% {
+    -webkit-transform: skewX(0.390625deg) skewY(0.390625deg);
+    transform: skewX(0.390625deg) skewY(0.390625deg);
+  }
+
+  88.8% {
+    -webkit-transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+    transform: skewX(-0.1953125deg) skewY(-0.1953125deg);
+  }
 }
 
-footer {
-    position: relative;
-    padding: 10px;
-    margin-bottom: 10px;
-}
-
-/* Bio Styling */
-
-.bio-body {
-    
-}
-
-.bio-p {
-    display: inline-flex;
-    justify-content: space-around;
-=======
-#bio article section {
-  flex: 1 20%;
->>>>>>> origin/master
+.jello {
+  -webkit-animation-name: jello;
+  animation-name: jello;
+  -webkit-transform-origin: center;
+  transform-origin: center;
 }
